--- a/functions/package.json
+++ b/functions/package.json
@@ -12,9 +12,10 @@
   "engines": {
     "node": "22"
   },
-  "main": "lib/index.js",
+  "main": "lib/functions/src/index.js",
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
+    "dotenv": "^16.5.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1"
   },
