--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.6.1",
     "firebase-admin": "^13.3.0",
+    "framer-motion": "^12.11.3",
     "lightningcss": "^1.29.3",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
